src/objects/MYBZ_Trend__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Global_ID__c</fullName>
        <label>Global ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lilly_Product__c</fullName>
        <formula>IF(Owner__c=&apos;LILLY&apos;,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lilly Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>MONTH( Date__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentag_Change_Previous_Three_Months__c</fullName>
        <label>Percentag Change - Previous Three Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Change_Previous_Six_Months__c</fullName>
        <label>Percentage Change-Previous Six Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Previous_TRx_Units__c</fullName>
        <label>Previous TRx Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>MYBZ_Product__c</referenceTo>
        <relationshipLabel>Trends</relationshipLabel>
        <relationshipName>Trends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>TRx_Units__c</fullName>
        <label>TRx Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <referenceTo>MYBZ_Territory__c</referenceTo>
        <relationshipName>Product_Trends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>YEAR(Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percentageChangeFromPreviousMonth__c</fullName>
        <formula>((TRx_Units__c -  Previous_TRx_Units__c )/Previous_TRx_Units__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage Change From Previous Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Trend</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Global_ID__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Trend Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>